--- a/AppHarborFoo.UI.Web/Web.config
+++ b/AppHarborFoo.UI.Web/Web.config
@@ -13,9 +13,15 @@
           </sectionGroup>
         </sectionGroup>
       </sectionGroup>
-    </configSections>  
+    </configSections>
 
-    <appSettings />
+    <appSettings>
+
+      <!-- AppHarbor will replace this value... -->
+      <add key="SQLSERVER_CONNECTION_STRING" value="uid=sa;pwd=w1bbl3;data source=.;initial catalog=appharborfoo" />
+      
+    </appSettings>
+  
     <connectionStrings />
     <system.web>
         <compilation debug="true">
